--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  # Schedule daily updates
+  # every day updat
   schedule: [{cron: "0 0 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
@@ -15,3 +15,16 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          user: vinograpsov
+          template: classic
+          
+          base: header, activity, community, repositories, metadata
+          
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          
+          plugin_languages: yes
+          plugin_languages_ignored: css, html
+          plugin_languages_details: percentage
+             
+          config_timezone: Europe/Warsaw
