--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
           plugin_isocalendar_duration: full-year
           
           plugin_languages: yes
-          plugin_languages_ignored: css, html
+          plugin_languages_ignored: css, html, jupyter notebook, cmake
           plugin_languages_details: percentage
              
           config_timezone: Europe/Warsaw
