--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,12 +19,33 @@ jobs:
           template: classic
           
           base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Warsaw
+          
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
           
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           
           plugin_languages: yes
-          plugin_languages_ignored: css, html, jupyter notebook, cmake
+          plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, jupyter notebook 
           plugin_languages_details: percentage
              
-          config_timezone: Europe/Warsaw
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          # Years to display
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
+          
+
+                    
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
+          
+          
