--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,17 +21,17 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Warsaw
           
-          plugin_topics: yes
-          plugin_topics_limit: 15
-          plugin_topics_mode: icons
-          plugin_topics_sort: stars
+#           plugin_topics: yes
+#           plugin_topics_limit: 15
+#           plugin_topics_mode: icons
+#           plugin_topics_sort: stars
           
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           
-          plugin_languages: yes
-          plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, jupyter notebook 
-          plugin_languages_details: percentage
+#           plugin_languages: yes
+#           plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, jupyter notebook 
+#           plugin_languages_details: percentage
              
           plugin_lines: yes
           plugin_lines_history_limit: 1
